# staleksERP

./: .env.example  .env.prod.example  .gitignore  ARCHITECTURE.md  Makefile  SPRINT7_PROMPT.md  VPS_DEPLOY_INSTRUCTIONS.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  alembic.ini  e2e_test_orders.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0014_feedback.py  0016_print_forms_permissions.py  0017_feedback_v2.py  0018_production_workshops.py
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/common/: exceptions.py  pagination.py  redis_client.py
backend/app/configurator/: models.py  router.py  schemas.py  service.py
backend/app/configurator/services/: __init__.py  bom.py  catalog.py  configurations.py  pricing.py  rules.py
backend/app/feedback/: __init__.py  ai.py  file_storage.py  models.py  router.py  schemas.py  service.py
backend/app/orders/: models.py  router.py  schemas.py  service.py
backend/app/orders/services/: __init__.py  crud.py  doors.py  items.py  pricing.py  workflow.py
backend/app/production/: models.py  router.py  schemas.py
backend/app/production/services/: __init__.py  launch.py  movement.py  print_forms.py  queue.py  routes.py  stages.py  (+1 more)
backend/app/scripts/: seed_configurator.py  seed_db.py  seed_test_data.py
backend/app/services/: models.py  router.py  schemas.py  service.py
backend/app/users/: router.py
backend/tests/: test_auth.py
(+132 files in other folders)
